[package]
name = "core-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
mongodb = "2.3.1"
lettre = "0.10"
dotenv = "0.15"
uuid = { version= "1.2.2", features = ["v4"] }
reqwest = "0.11.13"
serde = "1.0.151"
serde_json = "1.0.91"